spoker-react/src/pages/pockerRoom/components/pockerBoard.css
.content {
  padding-bottom:100px; 
  background:#ffffff;
}
.footer {
  position:absolute;bottom:100px;width:100%;height:100px;
  background:#ffffff;
}
.titile {
  font-size: 45px;
  color: #ffffff;
  display: inline-block;
  line-height: 45px;
  vertical-align: -10px
}
.header {
  background: #337AB7;
  padding: 0 5px;
  margin: 5px;
}
.toolbar {
  padding: 0;
}
.storySwitcher {
  text-align: center;
  padding-top: 15px;
  font-size: 11px;
}
.storySwitcherControls{
  margin: 0 20px 20px 20px;
}

.storySwitcherControlsSvg {
  height: 23px;
  width: 23px;
  cursor: pointer;
  background: #fb8800;
  border: 1px solid rgb(201, 109, 0);
  border-radius: 3px;
}
.storyCounter {
  font-size: 30px;
  font-weight: bold;
  margin: 20px;
}
.addStoryBtn {
  text-align: center;
}

